--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "leuchtfeuer/mautic-companysegments-bundle",
     "description": "Provide a 2nd type of Segments which can contain Companies (and allows segment filters)",
-    "license": "GPL-3.0",
+    "license": "GPL-3.0-or-later",
     "type": "mautic-plugin",
     "homepage": "https://www.Leuchtfeuer.com",
     "minimum-stability": "dev",
@@ -10,6 +10,8 @@
         "name": "Leuchtfeuer Digital Marketing GmbH",
         "email": "mautic-plugins@Leuchtfeuer.com"
     }],
+    "keywords": ["mautic","plugin","integration","segments", "company"],
+
     "require": {
         "php": "^8.0",
         "ext-json": "*",
