--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
     "prefer-stable": true,
     "authors": [{
         "name": "Leuchtfeuer Digital Marketing GmbH",
-        "email": "mautic-plugins@Leuchtfeuer.com"
+        "email": "mautic-plugins@Leuchtfeuer.com",
+        "homepage": "https://Leuchtfeuer.com/mautic/",
+        "role": "Developer"
     }],
     "keywords": ["mautic","plugin","integration","segments", "company"],
 
